@@ -1,10 +1,11 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2021 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.ide.ui.laf;
 
 import com.intellij.CommonBundle;
 import com.intellij.diagnostic.Activity;
 import com.intellij.diagnostic.StartUpMeasurer;
 import com.intellij.icons.AllIcons;
+import com.intellij.ide.HelpTooltip;
 import com.intellij.ide.IdeBundle;
 import com.intellij.ide.WelcomeWizardUtil;
 import com.intellij.ide.actions.QuickChangeLookAndFeel;
@@ -16,8 +17,11 @@ import com.intellij.ide.ui.laf.darcula.DarculaLaf;
 import com.intellij.ide.ui.laf.darcula.DarculaLookAndFeelInfo;
 import com.intellij.ide.util.PropertiesComponent;
 import com.intellij.openapi.Disposable;
+import com.intellij.openapi.actionSystem.*;
 import com.intellij.openapi.actionSystem.impl.ActionToolbarImpl;
 import com.intellij.openapi.application.ApplicationManager;
+import com.intellij.openapi.application.ModalityState;
+import com.intellij.openapi.application.ex.ApplicationInfoEx;
 import com.intellij.openapi.components.PersistentStateComponent;
 import com.intellij.openapi.components.RoamingType;
 import com.intellij.openapi.components.State;
@@ -30,15 +34,13 @@ import com.intellij.openapi.extensions.ExtensionPointListener;
 import com.intellij.openapi.extensions.PluginDescriptor;
 import com.intellij.openapi.ui.DialogWrapper;
 import com.intellij.openapi.ui.Messages;
+import com.intellij.openapi.ui.popup.JBPopupFactory;
+import com.intellij.openapi.ui.popup.ListPopup;
 import com.intellij.openapi.ui.popup.util.PopupUtil;
-import com.intellij.openapi.util.IconLoader;
-import com.intellij.openapi.util.SystemInfo;
-import com.intellij.openapi.util.SystemInfoRt;
-import com.intellij.openapi.util.UserDataHolder;
+import com.intellij.openapi.util.*;
 import com.intellij.openapi.util.registry.Registry;
-import com.intellij.openapi.util.registry.RegistryValue;
-import com.intellij.openapi.util.registry.RegistryValueListener;
 import com.intellij.openapi.util.text.StringUtil;
+import com.intellij.openapi.util.text.Strings;
 import com.intellij.openapi.wm.impl.IdeGlassPaneImpl;
 import com.intellij.ui.*;
 import com.intellij.ui.components.DefaultLinkButtonUI;
@@ -46,12 +48,12 @@ import com.intellij.ui.popup.OurHeavyWeightPopup;
 import com.intellij.ui.scale.JBUIScale;
 import com.intellij.ui.tree.ui.DefaultTreeUI;
 import com.intellij.util.EventDispatcher;
+import com.intellij.util.FontUtil;
 import com.intellij.util.IJSwingUtilities;
-import com.intellij.util.ObjectUtils;
+import com.intellij.util.SVGLoader;
 import com.intellij.util.concurrency.SynchronizedClearableLazy;
-import com.intellij.util.containers.ContainerUtil;
-import com.intellij.util.messages.MessageBus;
 import com.intellij.util.ui.*;
+import kotlin.Lazy;
 import org.intellij.lang.annotations.JdkConstants;
 import org.jdom.Element;
 import org.jetbrains.annotations.*;
@@ -71,8 +73,6 @@ import java.util.List;
 import java.util.*;
 import java.util.function.BooleanSupplier;
 
-import static com.intellij.util.FontUtil.enableKerning;
-
 @State(name = "LafManager", storages = @Storage(value = "laf.xml", roamingType = RoamingType.PER_OS))
 public final class LafManagerImpl extends LafManager implements PersistentStateComponent<Element>, Disposable {
   private static final Logger LOG = Logger.getInstance(LafManager.class);
@@ -80,10 +80,12 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
   @NonNls private static final String ELEMENT_LAF = "laf";
   @NonNls private static final String ELEMENT_PREFERRED_LIGHT_LAF = "preferred-light-laf";
   @NonNls private static final String ELEMENT_PREFERRED_DARK_LAF = "preferred-dark-laf";
+  @NonNls private static final String ATTRIBUTE_AUTODETECT = "autodetect";
   @NonNls private static final String ATTRIBUTE_CLASS_NAME = "class-name";
   @NonNls private static final String ATTRIBUTE_THEME_NAME = "themeId";
 
   private static final String DEFAULT_LIGHT_THEME_ID = "JetBrainsLightTheme";
+  private static final String HIGH_CONTRAST_THEME_ID = "JetBrainsHighContrastTheme";
   private static final String DARCULA_EDITOR_THEME_KEY = "Darcula.SavedEditorTheme";
   private static final String DEFAULT_EDITOR_THEME_KEY = "Default.SavedEditorTheme";
 
@@ -107,48 +109,58 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
     return infos;
   });
 
-  private final UIManager.LookAndFeelInfo myDefaultLightLaf = getDefaultLightTheme();
-  private final UIManager.LookAndFeelInfo myDefaultDarkLaf = new DarculaLookAndFeelInfo();
+  private final UIManager.LookAndFeelInfo myDefaultLightLaf = loadDefaultLightTheme();
+  private final UIManager.LookAndFeelInfo myDefaultDarkLaf = loadDefaultDarkTheme();
   private final Map<Object, Object> ourDefaults = (UIDefaults)UIManager.getDefaults().clone();
 
   private UIManager.LookAndFeelInfo myCurrentLaf;
   private UIManager.LookAndFeelInfo myPreferredLightLaf;
   private UIManager.LookAndFeelInfo myPreferredDarkLaf;
 
-  private final Map<LafReference, HashMap<String, Object>> myStoredDefaults = new HashMap<>();
+  private final Map<LafReference, Map<String, Object>> myStoredDefaults = new HashMap<>();
 
   // A constant from Mac OS X implementation. See CPlatformWindow.WINDOW_ALPHA
-  public static final String WINDOW_ALPHA = "Window.alpha";
+  private static final String WINDOW_ALPHA = "Window.alpha";
 
-  private static final Map<String, String> ourLafClassesAliases = new HashMap<>();
-  private static final Map<String, Integer> lafNameOrder = new HashMap<>();
+  private static final Map<String, String> ourLafClassesAliases = Map.of("idea.dark.laf.classname", DarculaLookAndFeelInfo.CLASS_NAME);
+  private static Map<String, Integer> lafNameOrder = Map.of(
+    "IntelliJ Light", 0,
+    "macOS Light", 1,
+    "Windows 10 Light", 1,
+    "Darcula", 2,
+    "High contrast", 3
+  );
+
+  // allowing other plugins to change the order of the LaFs (used by Rider)
+  public static @NotNull Map<String, Integer> getLafNameOrder() {
+    return lafNameOrder;
+  }
+
+  public static void setLafNameOrder(@NotNull Map<String, Integer> value) {
+    lafNameOrder = value;
+  }
 
   private final SynchronizedClearableLazy<CollectionComboBoxModel<LafReference>> myLafComboBoxModel =
-    new SynchronizedClearableLazy<>(() -> new CollectionComboBoxModel<>(getAllReferences()));
+    new SynchronizedClearableLazy<>(() -> new LafComboBoxModel());
 
-  private final SynchronizedClearableLazy<CollectionComboBoxModel<LafReference>> myPreferredLightComboBoxModel =
-    new SynchronizedClearableLazy<>(() -> new CollectionComboBoxModel<>(getLightReferences()));
+  private final Lazy<ActionToolbar> settingsToolbar = new SynchronizedClearableLazy<>(() -> {
+    DefaultActionGroup group = new DefaultActionGroup(new PreferredLafAction());
+    ActionToolbar toolbar = ActionManager.getInstance().createActionToolbar(ActionPlaces.TOOLBAR, group, true);
+    toolbar.getComponent().setOpaque(false);
+    return toolbar;
+  });
 
-  private final SynchronizedClearableLazy<CollectionComboBoxModel<LafReference>> myPreferredDarkComboBoxModel =
-    new SynchronizedClearableLazy<>(() -> new CollectionComboBoxModel<>(getDarkReferences()));
-
-  static {
-    ourLafClassesAliases.put("idea.dark.laf.classname", DarculaLookAndFeelInfo.CLASS_NAME);
-
-    lafNameOrder.put("IntelliJ Light", 0);
-    lafNameOrder.put("macOS Light", 1);
-    lafNameOrder.put("Windows 10 Light", 1);
-    lafNameOrder.put("Darcula", 2);
-    lafNameOrder.put("High contrast", 3);
-  }
+  // SystemDarkThemeDetector must be created as part of LafManagerImpl initialization and not on demand because system listeners are added
+  private @Nullable SystemDarkThemeDetector lafDetector;
+  private static final LafReference SEPARATOR = new LafReference("", null, null);
 
   private boolean myFirstSetup = true;
   private boolean myUpdatingPlugin = false;
   private @Nullable String myThemeIdBeforePluginUpdate = null;
-  private final SynchronizedClearableLazy<Boolean> autodetect = new SynchronizedClearableLazy<>(() -> Registry.is("ide.laf.autodetect"));
+  private boolean autodetect;
 
-  private static UIManager.LookAndFeelInfo getDefaultLightTheme() {
-    for(UIThemeProvider provider: UIThemeProvider.EP_NAME.getExtensionList()) {
+  private static UIManager.LookAndFeelInfo loadDefaultLightTheme() {
+    for (UIThemeProvider provider : UIThemeProvider.EP_NAME.getIterable()) {
       if (DEFAULT_LIGHT_THEME_ID.equals(provider.id)) {
         UITheme theme = provider.createTheme();
         if (theme != null) {
@@ -157,11 +169,38 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
       }
     }
     LOG.error("Can't load " + DEFAULT_LIGHT_THEME_ID);
-    return new IntelliJLookAndFeelInfo();
+
+    String lafInfoFQN = ApplicationInfoEx.getInstanceEx().getDefaultLightLaf();
+    UIManager.LookAndFeelInfo lookAndFeelInfo = StringUtil.isNotEmpty(lafInfoFQN) ? createLafInfo(lafInfoFQN) : null;
+    return lookAndFeelInfo != null ? lookAndFeelInfo : new IntelliJLookAndFeelInfo();
   }
 
-  @NotNull
-  private List<UIManager.LookAndFeelInfo> computeLafList() {
+  private static UIManager.LookAndFeelInfo loadDefaultDarkTheme() {
+    String lafInfoFQN = ApplicationInfoEx.getInstanceEx().getDefaultDarkLaf();
+    UIManager.LookAndFeelInfo lookAndFeelInfo = StringUtil.isNotEmpty(lafInfoFQN) ? createLafInfo(lafInfoFQN) : null;
+    return lookAndFeelInfo != null ? lookAndFeelInfo : new DarculaLookAndFeelInfo();
+  }
+
+  public UIManager.LookAndFeelInfo getDefaultLightLaf() {
+    return myDefaultLightLaf;
+  }
+
+  public UIManager.LookAndFeelInfo getDefaultDarkLaf() {
+    return myDefaultDarkLaf;
+  }
+
+  @Nullable
+  private static UIManager.LookAndFeelInfo createLafInfo(@NotNull String fqn) {
+    try {
+      Class<?> lafInfoClass = Class.forName(fqn);
+      return (UIManager.LookAndFeelInfo)lafInfoClass.getDeclaredConstructor().newInstance();
+    }
+    catch (Throwable e) {
+      return null;
+    }
+  }
+
+  private @NotNull List<UIManager.LookAndFeelInfo> computeLafList() {
     List<UIManager.LookAndFeelInfo> lafList = new ArrayList<>();
     lafList.add(myDefaultLightLaf);
     lafList.add(myDefaultDarkLaf);
@@ -196,7 +235,7 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
     return lafList;
   }
 
-  private static void sortThemes(@NotNull List<UIManager.LookAndFeelInfo> list) {
+  private static void sortThemes(@NotNull List<? extends UIManager.LookAndFeelInfo> list) {
     list.sort((t1, t2) -> {
       String n1 = t1.getName();
       String n2 = t2.getName();
@@ -228,38 +267,44 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
 
   @Override
   public void initializeComponent() {
-    Registry.get("ide.laf.autodetect").addListener(new RegistryValueListener() {
-      @Override
-      public void afterValueChanged(@NotNull RegistryValue value) {
-        autodetect.drop();
-        detectAndSyncLaf();
+    ApplicationManager.getApplication().invokeLater(() -> {
+      UIManager.LookAndFeelInfo currentLaf = myCurrentLaf;
+      assert currentLaf != null;
+      if (currentLaf instanceof UIThemeBasedLookAndFeelInfo) {
+        if (!((UIThemeBasedLookAndFeelInfo)currentLaf).isInitialised()) {
+          doSetLaF(currentLaf, false);
+        }
       }
-    }, this);
-
-    if (myCurrentLaf != null && !(myCurrentLaf instanceof UIThemeBasedLookAndFeelInfo)) {
-      final UIManager.LookAndFeelInfo laf = findLaf(myCurrentLaf.getClassName());
-      if (laf != null) {
-        boolean needUninstall = StartupUiUtil.isUnderDarcula();
-        setCurrentLookAndFeel(laf); // setup default LAF or one specified by readExternal.
-        updateWizardLAF(needUninstall);
+      else {
+        UIManager.LookAndFeelInfo laf = findLaf(currentLaf.getClassName());
+        if (laf != null) {
+          boolean needUninstall = StartupUiUtil.isUnderDarcula();
+          // setup default LAF or one specified by readExternal
+          doSetLaF(laf, false);
+          updateWizardLAF(needUninstall);
+        }
       }
-    }
 
-    if (myCurrentLaf instanceof UIThemeBasedLookAndFeelInfo && !((UIThemeBasedLookAndFeelInfo)myCurrentLaf).isInitialised()) {
-      setCurrentLookAndFeel(myCurrentLaf);
-    }
+      selectComboboxModel();
+      myFirstSetup = false;
 
-    updateUI();
+      updateUI();
+      detectAndSyncLaf();
 
+      ((EditorColorsManagerImpl)EditorColorsManager.getInstance()).initScheme(myCurrentLaf);
+
+      addThemeAndDynamicPluginListeners();
+    }, ModalityState.any());
+  }
+
+  private void addThemeAndDynamicPluginListeners() {
     UIThemeProvider.EP_NAME.addExtensionPointListener(new UIThemeEPListener(), this);
-
-    MessageBus bus = ApplicationManager.getApplication().getMessageBus();
-    bus.connect(this).subscribe(DynamicPluginListener.TOPIC, new DynamicPluginListener() {
+    ApplicationManager.getApplication().getMessageBus().connect(this).subscribe(DynamicPluginListener.TOPIC, new DynamicPluginListener() {
       @Override
       public void beforePluginUnload(@NotNull IdeaPluginDescriptor pluginDescriptor, boolean isUpdate) {
         myUpdatingPlugin = isUpdate;
         if (myCurrentLaf instanceof UIThemeBasedLookAndFeelInfo) {
-          myThemeIdBeforePluginUpdate = ((UIThemeBasedLookAndFeelInfo) myCurrentLaf).getTheme().getId();
+          myThemeIdBeforePluginUpdate = ((UIThemeBasedLookAndFeelInfo)myCurrentLaf).getTheme().getId();
         }
         else {
           myThemeIdBeforePluginUpdate = null;
@@ -272,28 +317,26 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
         myThemeIdBeforePluginUpdate = null;
       }
     });
-
-    if (SystemInfo.isWin10OrNewer) {
-      Toolkit.getDefaultToolkit().addPropertyChangeListener("win.darkTheme.on", e -> syncLaf(e.getNewValue() == Boolean.TRUE));
-    }
-    detectAndSyncLaf();
   }
 
   private void detectAndSyncLaf() {
-    SystemDarkThemeDetector detector = SystemDarkThemeDetector.getInstance();
-    if (detector.getDetectionSupported() && isAutoDetect()) {
-      detector.check(this::syncLaf);
+    if (autodetect) {
+      SystemDarkThemeDetector lafDetector = getOrCreateLafDetector();
+      if (lafDetector.getDetectionSupported()) {
+        lafDetector.check();
+      }
     }
   }
 
   private void syncLaf(boolean systemDark) {
-    boolean currentDark = myCurrentLaf instanceof UIThemeBasedLookAndFeelInfo && ((UIThemeBasedLookAndFeelInfo)myCurrentLaf).getTheme().isDark() ||
-                          UIUtil.isUnderDarcula();
-
-    UIManager.LookAndFeelInfo expectedLaf = systemDark ? myPreferredDarkLaf : myPreferredLightLaf;
-
-    if (currentDark != systemDark || myCurrentLaf != expectedLaf) {
-      QuickChangeLookAndFeel.switchLafAndUpdateUI(LafManager.getInstance(), expectedLaf, true);
+    if (autodetect) {
+      boolean currentDark =
+        myCurrentLaf instanceof UIThemeBasedLookAndFeelInfo && ((UIThemeBasedLookAndFeelInfo)myCurrentLaf).getTheme().isDark() ||
+        StartupUiUtil.isUnderDarcula();
+      UIManager.LookAndFeelInfo expectedLaf = systemDark ? myPreferredDarkLaf : myPreferredLightLaf;
+      if (currentDark != systemDark || myCurrentLaf != expectedLaf) {
+        QuickChangeLookAndFeel.switchLafAndUpdateUI(this, expectedLaf, true);
+      }
     }
   }
 
@@ -317,30 +360,35 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
 
   @Override
   public void loadState(@NotNull Element element) {
-    myCurrentLaf = loadLafState(element, ELEMENT_LAF, getDefaultLaf());
-    myPreferredLightLaf = loadLafState(element, ELEMENT_PREFERRED_LIGHT_LAF, myDefaultLightLaf);
-    myPreferredDarkLaf = loadLafState(element, ELEMENT_PREFERRED_DARK_LAF, myDefaultDarkLaf);
+    myCurrentLaf = loadLafState(element, ELEMENT_LAF);
+    if (myCurrentLaf == null) {
+      myCurrentLaf = loadDefaultLaf();
+    }
+
+    autodetect = Boolean.parseBoolean(element.getAttributeValue(ATTRIBUTE_AUTODETECT));
+    myPreferredLightLaf = Objects.requireNonNullElse(loadLafState(element, ELEMENT_PREFERRED_LIGHT_LAF), myDefaultLightLaf);
+    myPreferredDarkLaf = Objects.requireNonNullElse(loadLafState(element, ELEMENT_PREFERRED_DARK_LAF), myDefaultDarkLaf);
+
+    if (autodetect) {
+      getOrCreateLafDetector();
+    }
   }
 
-  private UIManager.LookAndFeelInfo loadLafState(@NotNull Element element, @NonNls String attrName, UIManager.LookAndFeelInfo defaultValue) {
-    UIManager.LookAndFeelInfo laf = null;
+  private @Nullable UIManager.LookAndFeelInfo loadLafState(@NotNull Element element, @NotNull @NonNls String attrName) {
     Element lafElement = element.getChild(attrName);
-    if (lafElement != null) {
-      laf = findLaf(lafElement.getAttributeValue(ATTRIBUTE_CLASS_NAME), lafElement.getAttributeValue(ATTRIBUTE_THEME_NAME));
+    if (lafElement == null) {
+      return null;
     }
-
-    // If LAF is undefined (wrong class name or something else) we have set default LAF anyway.
-    if (laf == null) {
-      laf = defaultValue;
-    }
-
-    return laf;
+    return findLaf(lafElement.getAttributeValue(ATTRIBUTE_CLASS_NAME), lafElement.getAttributeValue(ATTRIBUTE_THEME_NAME));
   }
 
-  @Nullable
-  private UIManager.LookAndFeelInfo findLaf(String lafClassName, String themeId) {
+  private @Nullable UIManager.LookAndFeelInfo findLaf(@Nullable String lafClassName, @Nullable String themeId) {
     if (lafClassName != null && ourLafClassesAliases.containsKey(lafClassName)) {
       lafClassName = ourLafClassesAliases.get(lafClassName);
+    }
+
+    if ("com.sun.java.swing.plaf.windows.WindowsLookAndFeel".equals(lafClassName)) {
+      return myDefaultLightLaf;
     }
 
     if (themeId != null) {
@@ -358,20 +406,25 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
 
   @Override
   public void noStateLoaded() {
-    myCurrentLaf = getDefaultLaf();
+    myCurrentLaf = loadDefaultLaf();
+    myPreferredLightLaf = myDefaultLightLaf;
+    myPreferredDarkLaf = myDefaultDarkLaf;
+    autodetect = false;
   }
 
   @Override
   public Element getState() {
     Element element = new Element("state");
-    getLafState(element, ELEMENT_LAF, getCurrentLookAndFeel(LafType.ALL));
+    element.setAttribute(ATTRIBUTE_AUTODETECT, Boolean.toString(autodetect));
+
+    getLafState(element, ELEMENT_LAF, getCurrentLookAndFeel());
 
     if (myPreferredLightLaf != myDefaultLightLaf) {
-      getLafState(element, ELEMENT_PREFERRED_LIGHT_LAF, getCurrentLookAndFeel(LafType.LIGHT));
+      getLafState(element, ELEMENT_PREFERRED_LIGHT_LAF, myPreferredLightLaf);
     }
 
     if (myPreferredDarkLaf != myDefaultDarkLaf) {
-      getLafState(element, ELEMENT_PREFERRED_DARK_LAF, getCurrentLookAndFeel(LafType.DARK));
+      getLafState(element, ELEMENT_PREFERRED_DARK_LAF, myPreferredDarkLaf);
     }
 
     return element;
@@ -401,61 +454,35 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
   }
 
   @Override
-  public CollectionComboBoxModel<LafReference> getLafComboBoxModel(@NotNull LafType type) {
-    switch (type) {
-      case LIGHT:
-          return myPreferredLightComboBoxModel.getValue();
-
-      case DARK:
-        return myPreferredDarkComboBoxModel.getValue();
-
-      case ALL:
-        return myLafComboBoxModel.getValue();
-
-      default:
-        throw new IllegalStateException("Unknown LafType: " + type);
-    }
+  public @NotNull CollectionComboBoxModel<LafReference> getLafComboBoxModel() {
+    return myLafComboBoxModel.getValue();
   }
 
-  private List<LafReference> getAllReferences() {
-    return ContainerUtil.map(myLaFs.getValue(), LafManagerImpl::createLafReference);
-  }
-
-  private List<LafReference> getLightReferences() {
-    return ContainerUtil.map(ContainerUtil.filter(myLaFs.getValue(), info -> {
-     if (info instanceof UIThemeBasedLookAndFeelInfo) {
-       return !((UIThemeBasedLookAndFeelInfo)info).getTheme().isDark();
-     }
-     return info.getName().equals(IntelliJLaf.NAME);
-    }), LafManagerImpl::createLafReference);
-  }
-
-  private List<LafReference> getDarkReferences() {
-    return ContainerUtil.map(ContainerUtil.filter(myLaFs.getValue(), info -> {
-      if (info instanceof UIThemeBasedLookAndFeelInfo) {
-        return ((UIThemeBasedLookAndFeelInfo)info).getTheme().isDark();
+  private @NotNull List<LafReference> getAllReferences() {
+    List<LafReference> result = new ArrayList<>();
+    boolean addSeparator = false;
+    int maxNameOrder = Collections.max(lafNameOrder.values());
+    for (UIManager.LookAndFeelInfo info : myLaFs.getValue()) {
+      if (addSeparator) {
+        result.add(SEPARATOR);
+        addSeparator = false;
       }
-      return info.getName().equals(DarculaLaf.NAME);
-    }), LafManagerImpl::createLafReference);
+      result.add(createLafReference(info));
+      if (Objects.equals(lafNameOrder.get(info.getName()), maxNameOrder)) {
+        addSeparator = true;
+      }
+    }
+
+    return result;
   }
 
   private void updateLafComboboxModel() {
     myLafComboBoxModel.drop();
-    myPreferredLightComboBoxModel.drop();
-    myPreferredDarkComboBoxModel.drop();
   }
 
   private void selectComboboxModel() {
     if (myLafComboBoxModel.isInitialized()) {
       myLafComboBoxModel.getValue().setSelectedItem(createLafReference(myCurrentLaf));
-    }
-
-    if (myPreferredLightComboBoxModel.isInitialized()) {
-      myPreferredLightComboBoxModel.getValue().setSelectedItem(createLafReference(myPreferredLightLaf));
-    }
-
-    if (myPreferredDarkComboBoxModel.isInitialized()) {
-      myPreferredDarkComboBoxModel.getValue().setSelectedItem(createLafReference(myPreferredDarkLaf));
     }
   }
 
@@ -469,81 +496,80 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
   }
 
   @Override
-  public UIManager.LookAndFeelInfo findLaf(LafReference reference) {
+  public UIManager.LookAndFeelInfo findLaf(@NotNull LafReference reference) {
     return findLaf(reference.getClassName(), reference.getThemeId());
   }
 
   @Override
   @Nullable
-  public UIManager.LookAndFeelInfo getCurrentLookAndFeel(@NotNull LafManager.LafType type) {
-    switch (type) {
-      case DARK:
-        return myPreferredDarkLaf;
-
-      case LIGHT:
-        return myPreferredLightLaf;
-
-      case ALL:
-        return myCurrentLaf;
-
-      default:
-        throw new IllegalStateException("Unknown LafType: " + type);
-    }
+  public UIManager.LookAndFeelInfo getCurrentLookAndFeel() {
+    return myCurrentLaf;
   }
 
   @Override
-  public LafReference getLookAndFeelReference(@NotNull LafType type) {
-    return createLafReference(getCurrentLookAndFeel(type));
+  public LafReference getLookAndFeelReference() {
+    return createLafReference(getCurrentLookAndFeel());
   }
 
   @Override
-  public void setLookAndFeelReference(@NotNull LafType type, LafReference lafReference) {
-      switch (type) {
-        case DARK:
-          myPreferredDarkLaf = findLaf(lafReference.getClassName(), lafReference.getThemeId());
-          detectAndSyncLaf();
-          break;
-
-        case LIGHT:
-          myPreferredLightLaf = findLaf(lafReference.getClassName(), lafReference.getThemeId());
-          detectAndSyncLaf();
-          break;
-
-        default:
-          throw new UnsupportedOperationException("Can't set look and feel reference: " + type);
-      }
+  public ListCellRenderer<LafReference> getLookAndFeelCellRenderer() {
+    return new LafCellRenderer();
   }
 
-  public UIManager.LookAndFeelInfo getDefaultLaf() {
+  @Override
+  @NotNull
+  public JComponent getSettingsToolbar() {
+    return settingsToolbar.getValue().getComponent();
+  }
+
+  private @NotNull UIManager.LookAndFeelInfo loadDefaultLaf() {
     String wizardLafName = WelcomeWizardUtil.getWizardLAF();
     if (wizardLafName != null) {
       UIManager.LookAndFeelInfo laf = findLaf(wizardLafName);
-      if (laf != null) return laf;
+      if (laf != null) {
+        return laf;
+      }
       LOG.error("Could not find wizard L&F: " + wizardLafName);
     }
 
     if (SystemInfoRt.isMac) {
-      String className = IntelliJLaf.class.getName();
+      String className = DarculaLaf.class.getName();
       UIManager.LookAndFeelInfo laf = findLaf(className);
-      if (laf != null) return laf;
+      if (laf != null) {
+        return laf;
+      }
       LOG.error("Could not find OS X L&F: " + className);
     }
 
     String appLafName = WelcomeWizardUtil.getDefaultLAF();
     if (appLafName != null) {
       UIManager.LookAndFeelInfo laf = findLaf(appLafName);
-      if (laf != null) return laf;
+      if (laf != null) {
+        return laf;
+      }
       LOG.error("Could not find app L&F: " + appLafName);
     }
 
-    String defaultLafName = IntelliJLaf.class.getName();
+    // Use HighContrast theme for IDE in Windows if HighContrast desktop mode is set.
+    if (SystemInfoRt.isWindows && Toolkit.getDefaultToolkit().getDesktopProperty("win.highContrast.on") == Boolean.TRUE) {
+      for (UIManager.LookAndFeelInfo laf : myLaFs.getValue()) {
+        if (laf instanceof UIThemeBasedLookAndFeelInfo &&
+            HIGH_CONTRAST_THEME_ID.equals(((UIThemeBasedLookAndFeelInfo)laf).getTheme().getId())) {
+          return laf;
+        }
+      }
+    }
+
+    String defaultLafName = DarculaLaf.class.getName();
     UIManager.LookAndFeelInfo laf = findLaf(defaultLafName);
-    if (laf != null) return laf;
+    if (laf != null) {
+      return laf;
+    }
+
     throw new IllegalStateException("No default L&F found: " + defaultLafName);
   }
 
-  @Nullable
-  private UIManager.LookAndFeelInfo findLaf(@NotNull String className) {
+  private @Nullable UIManager.LookAndFeelInfo findLaf(@NotNull String className) {
     if (myDefaultLightLaf.getClassName().equals(className)) {
       return myDefaultLightLaf;
     }
@@ -552,7 +578,7 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
     }
 
     for (UIManager.LookAndFeelInfo l : myLaFs.getValue()) {
-      if (!(l instanceof UIThemeBasedLookAndFeelInfo) && Objects.equals(l.getClassName(), className)) {
+      if (!(l instanceof UIThemeBasedLookAndFeelInfo) && className.equals(l.getClassName())) {
         return l;
       }
     }
@@ -564,17 +590,18 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
    */
   @Override
   public void setCurrentLookAndFeel(@NotNull UIManager.LookAndFeelInfo lookAndFeelInfo, boolean lockEditorScheme) {
-    setLookAndFeelImpl(lookAndFeelInfo, lockEditorScheme, false);
+    setLookAndFeelImpl(lookAndFeelInfo, !lockEditorScheme, true);
   }
 
   /**
    * Sets current LAF. The method doesn't update component hierarchy.
    */
-  private void setLookAndFeelImpl(@NotNull UIManager.LookAndFeelInfo lookAndFeelInfo, boolean lockEditorScheme, boolean processChangeSynchronously) {
+  private void setLookAndFeelImpl(@NotNull UIManager.LookAndFeelInfo lookAndFeelInfo,
+                                  boolean installEditorScheme,
+                                  boolean processChangeSynchronously) {
     UIManager.LookAndFeelInfo oldLaf = myCurrentLaf;
-
-    if (myCurrentLaf instanceof UIThemeBasedLookAndFeelInfo) {
-      ((UIThemeBasedLookAndFeelInfo)myCurrentLaf).dispose();
+    if (oldLaf != lookAndFeelInfo && oldLaf instanceof UIThemeBasedLookAndFeelInfo) {
+      ((UIThemeBasedLookAndFeelInfo)oldLaf).dispose();
     }
 
     if (findLaf(lookAndFeelInfo.getClassName()) == null) {
@@ -582,24 +609,49 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
       return;
     }
 
-    UIManager.getDefaults().clear();
-    UIManager.getDefaults().putAll(ourDefaults);
+    if (doSetLaF(lookAndFeelInfo, installEditorScheme)) {
+      return;
+    }
 
-    // Set L&F
-    if (IdeaLookAndFeelInfo.CLASS_NAME.equals(lookAndFeelInfo.getClassName())) { // that is IDEA default LAF
+    myCurrentLaf = lookAndFeelInfo;
+    selectComboboxModel();
+
+    if (!myFirstSetup && installEditorScheme) {
+      if (processChangeSynchronously) {
+        updateEditorSchemeIfNecessary(oldLaf, true);
+      }
+      else {
+        ApplicationManager.getApplication().invokeLater(() -> updateEditorSchemeIfNecessary(oldLaf, false));
+      }
+    }
+    myFirstSetup = false;
+  }
+
+  private boolean doSetLaF(@NotNull UIManager.LookAndFeelInfo lookAndFeelInfo, boolean installEditorScheme) {
+    UIDefaults defaults = UIManager.getDefaults();
+    defaults.clear();
+    defaults.putAll(ourDefaults);
+    if (!myFirstSetup) {
+      SVGLoader.setColorPatcherForSelection(null);
+    }
+
+    // set L&F
+    // that is IDEA default LAF
+    if (IdeaLookAndFeelInfo.CLASS_NAME.equals(lookAndFeelInfo.getClassName())) {
       IdeaLaf laf = new IdeaLaf();
       MetalLookAndFeel.setCurrentTheme(new IdeaBlueMetalTheme());
       try {
         UIManager.setLookAndFeel(laf);
+        updateIconsUnderSelection(false);
       }
       catch (Exception e) {
+        LOG.error(e);
         Messages.showMessageDialog(
           IdeBundle.message("error.cannot.set.look.and.feel", lookAndFeelInfo.getName(), e.getMessage()),
           CommonBundle.getErrorTitle(),
           Messages.getErrorIcon()
         );
-        LOG.error(e);
-        return;
+        return true;
       }
     }
     else if (DarculaLookAndFeelInfo.CLASS_NAME.equals(lookAndFeelInfo.getClassName())) {
@@ -607,26 +659,29 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
       try {
         UIManager.setLookAndFeel(laf);
         AppUIUtil.updateForDarcula(true);
+        if (lafNameOrder.containsKey(lookAndFeelInfo.getName())) {
+          updateIconsUnderSelection(true);
+        }
       }
       catch (Exception e) {
+        LOG.error(e);
         Messages.showMessageDialog(
           IdeBundle.message("error.cannot.set.look.and.feel", lookAndFeelInfo.getName(), e.getMessage()),
           CommonBundle.getErrorTitle(),
           Messages.getErrorIcon()
         );
-        LOG.error(e);
-        return;
+        return true;
       }
     }
-    else { // non default LAF
+    else {
+      // non default LAF
       try {
         LookAndFeel laf;
         if (lookAndFeelInfo instanceof PluggableLafInfo) {
           laf = ((PluggableLafInfo)lookAndFeelInfo).createLookAndFeel();
         }
         else {
-          laf = ((LookAndFeel)Class.forName(lookAndFeelInfo.getClassName()).newInstance());
-
+          laf = (LookAndFeel)Class.forName(lookAndFeelInfo.getClassName()).getConstructor().newInstance();
           if (laf instanceof MetalLookAndFeel) {
             MetalLookAndFeel.setCurrentTheme(new DefaultMetalTheme());
           }
@@ -635,59 +690,97 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
               UserDataHolder userDataHolder = (UserDataHolder)laf;
               userDataHolder.putUserData(UIUtil.LAF_WITH_THEME_KEY, Boolean.TRUE);
             }
+            if (lafNameOrder.containsKey(lookAndFeelInfo.getName()) && lookAndFeelInfo.getName().endsWith("Light")) {
+              updateIconsUnderSelection(false);
+            }
           }
         }
 
         UIManager.setLookAndFeel(laf);
       }
       catch (Exception e) {
+        LOG.error(e);
         Messages.showMessageDialog(
           IdeBundle.message("error.cannot.set.look.and.feel", lookAndFeelInfo.getName(), e.getMessage()),
           CommonBundle.getErrorTitle(),
           Messages.getErrorIcon()
         );
-        LOG.error(e);
-        return;
+        return true;
       }
     }
 
     if (lookAndFeelInfo instanceof UIThemeBasedLookAndFeelInfo) {
       try {
-        ((UIThemeBasedLookAndFeelInfo)lookAndFeelInfo).installTheme(UIManager.getLookAndFeelDefaults(), lockEditorScheme);
+        ((UIThemeBasedLookAndFeelInfo)lookAndFeelInfo).installTheme(UIManager.getLookAndFeelDefaults(), !installEditorScheme);
       }
       catch (Exception e) {
+        LOG.error(e);
         Messages.showMessageDialog(
           IdeBundle.message("error.cannot.set.look.and.feel", lookAndFeelInfo.getName(), e.getMessage()),
           CommonBundle.getErrorTitle(),
           Messages.getErrorIcon()
         );
-        LOG.error(e);
-        return;
+        return true;
       }
     }
 
     if (SystemInfoRt.isMac) {
       installMacOSXFonts(UIManager.getLookAndFeelDefaults());
     }
+    return false;
+  }
 
-    myCurrentLaf = ObjectUtils.chooseNotNull(lookAndFeelInfo, findLaf(lookAndFeelInfo.getClassName()));
-    selectComboboxModel();
-
-    if (!myFirstSetup) {
-      if (!lockEditorScheme) {
-        if (processChangeSynchronously) {
-          updateEditorSchemeIfNecessary(oldLaf, true);
-        }
-        else {
-          ApplicationManager.getApplication().invokeLater(() -> updateEditorSchemeIfNecessary(oldLaf, false));
-        }
-      }
+  private static void updateIconsUnderSelection(boolean darcula) {
+    Map<String, String> map = new HashMap<>();
+    if (darcula) {
+      map.put("#5e5e5e", "#5778ad");
+      map.put("#c75450", "#a95768");
+      map.put("#6e6e6e", "#afb1b3");
+      //map.put("#f26522", "#b76554"); //red
+      map.put("#f26522b3", "#bc6b43"); //red 70%
+      map.put("#f2652299", "#bc6b43"); //red 60% (same as 70%)
+      map.put("#62b54399", "#579b41"); //green 60%
+      map.put("#f98b9e99", "#ba7481"); //pink 60%
+      map.put("#f4af3d99", "#aa823f"); //yellow 60%
+      map.put("#b99bf899", "#977fca"); //purple 60%
+      map.put("#9aa7b0cc", "#97acc6"); //noun gray 80%
+      map.put("#9aa7b099", "#97acc6"); //noun gray 60% (same as 80%)
     }
-    myFirstSetup = false;
+    else {
+      map.put("#6e6e6e", "#afb1b3");
+      map.put("#db5860", "#b75e73");
+      //map.put("#f26522", "#b56a51"); //red
+      map.put("#f26522b3", "#d38369"); //red 70%
+      map.put("#f2652299", "#d38369"); //red 60% (same as 70%)
+      map.put("#40b6e099", "#5eb6d4"); //blue 60%
+      map.put("#62b54399", "#7ebe65"); //green 60%
+      map.put("#f98b9e99", "#f1a4b2"); //pink 60%
+      map.put("#f4af3d99", "#ecc27d"); //yellow 60%
+      map.put("#b99bf899", "#b49ee2"); //purple 60%
+      map.put("#9aa7b0cc", "#aebdc6"); //noun gray 80%
+      map.put("#9aa7b099", "#aebdc6"); //noun gray 60% (same as 80%)
+      map.put("#40b6e0b3", "#5eb6d4"); //blue 70%
+      map.put("#62b543b3", "#7ebe65"); //green 70%
+      map.put("#f98b9eb3", "#f1a4b2"); //pink 70%
+      map.put("#f4af3db3", "#ecc27d"); //yellow 70%
+      map.put("#b99bf8b3", "#b49ee2"); //purple 70%
+    }
+
+    Map<String, Integer> alpha = new HashMap<>(map.size());
+    map.forEach((key, value) -> alpha.put(value, 255));
+
+     SVGLoader.setColorPatcherForSelection(new SVGLoader.SvgElementColorPatcherProvider() {
+       @Override
+       public SVGLoader.@Nullable SvgElementColorPatcher forPath(@Nullable String path) {
+         return SVGLoader.newPatcher(null, map, alpha);
+       }
+     });
   }
 
   private void updateEditorSchemeIfNecessary(UIManager.LookAndFeelInfo oldLaf, boolean processChangeSynchronously) {
-    if (oldLaf instanceof TempUIThemeBasedLookAndFeelInfo || myCurrentLaf instanceof TempUIThemeBasedLookAndFeelInfo) return;
+    if (oldLaf instanceof TempUIThemeBasedLookAndFeelInfo || myCurrentLaf instanceof TempUIThemeBasedLookAndFeelInfo) {
+      return;
+    }
     if (myCurrentLaf instanceof UIThemeBasedLookAndFeelInfo) {
       if (((UIThemeBasedLookAndFeelInfo)myCurrentLaf).getTheme().getEditorSchemeName() != null) {
         return;
@@ -695,8 +788,8 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
     }
 
     boolean dark = StartupUiUtil.isUnderDarcula();
-    EditorColorsManager colorsManager = EditorColorsManager.getInstance();
-    EditorColorsScheme current = colorsManager.getGlobalScheme();
+    EditorColorsManager editorColorManager = EditorColorsManager.getInstance();
+    EditorColorsScheme current = editorColorManager.getGlobalScheme();
     boolean wasUITheme = oldLaf instanceof UIThemeBasedLookAndFeelInfo;
     if (dark != ColorUtil.isDark(current.getDefaultBackground()) || wasUITheme) {
       String targetScheme = dark ? DarculaLaf.NAME : EditorColorsScheme.DEFAULT_SCHEME_NAME;
@@ -704,29 +797,20 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
       String savedEditorThemeKey = dark ? DARCULA_EDITOR_THEME_KEY : DEFAULT_EDITOR_THEME_KEY;
       String toSavedEditorThemeKey = dark ? DEFAULT_EDITOR_THEME_KEY : DARCULA_EDITOR_THEME_KEY;
       String themeName =  properties.getValue(savedEditorThemeKey);
-      if (themeName != null && colorsManager.getScheme(themeName) != null) {
+      if (themeName != null && editorColorManager.getScheme(themeName) != null) {
         targetScheme = themeName;
       }
       if (!wasUITheme) {
         properties.setValue(toSavedEditorThemeKey, current.getName(), dark ? EditorColorsScheme.DEFAULT_SCHEME_NAME : DarculaLaf.NAME);
       }
 
-      EditorColorsScheme scheme = colorsManager.getScheme(targetScheme);
+      EditorColorsScheme scheme = editorColorManager.getScheme(targetScheme);
       if (scheme != null) {
-        ((EditorColorsManagerImpl) colorsManager).setGlobalScheme(scheme, processChangeSynchronously);
+        ((EditorColorsManagerImpl)editorColorManager).setGlobalScheme(scheme, processChangeSynchronously);
       }
     }
     UISettings.getShadowInstance().fireUISettingsChanged();
     ActionToolbarImpl.updateAllToolbarsImmediately();
-  }
-
-  /**
-   * @deprecated Use {@link AppUIUtil#updateForDarcula(boolean)}
-   */
-  @Deprecated
-  @ApiStatus.ScheduledForRemoval
-  public static void updateForDarcula(boolean isDarcula) {
-    AppUIUtil.updateForDarcula(isDarcula);
   }
 
   /**
@@ -735,11 +819,10 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
    */
   @Override
   public void updateUI() {
-    final UIDefaults uiDefaults = UIManager.getLookAndFeelDefaults();
+    UIDefaults uiDefaults = UIManager.getLookAndFeelDefaults();
     uiDefaults.put("LinkButtonUI", DefaultLinkButtonUI.class.getName());
 
     fixPopupWeight();
-
     fixMenuIssues(uiDefaults);
 
     initInputMapDefaults(uiDefaults);
@@ -756,11 +839,11 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
 
     patchHiDPI(uiDefaults);
 
-    fixMacOSDarkThemeDecorations();
-
     uiDefaults.put(RenderingHints.KEY_TEXT_ANTIALIASING, AntialiasingType.getKeyForCurrentScope(false));
     uiDefaults.put(RenderingHints.KEY_TEXT_LCD_CONTRAST, UIUtil.getLcdContrastValue());
-    uiDefaults.put(RenderingHints.KEY_FRACTIONALMETRICS, UISettings.getPREFERRED_FRACTIONAL_METRICS_VALUE());
+
+    uiDefaults.put(RenderingHints.KEY_FRACTIONALMETRICS,
+                   AppUIUtil.adjustFractionalMetrics(UISettings.getPREFERRED_FRACTIONAL_METRICS_VALUE()));
 
     for (Frame frame : Frame.getFrames()) {
       updateUI(frame);
@@ -770,22 +853,12 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
     myEventDispatcher.getMulticaster().lookAndFeelChanged(this);
   }
 
-  @SuppressWarnings({"MethodMayBeStatic", "UnnecessaryReturnStatement"})
-  private void fixMacOSDarkThemeDecorations() {
-    if (!SystemInfo.isMacOSMojave) return;
-
-    //if (myCurrentLaf == myDefaultDarkTheme
-    //    || (myCurrentLaf instanceof UIThemeBasedLookAndFeelInfo && ((UIThemeBasedLookAndFeelInfo)myCurrentLaf).getTheme().isDark())) {
-    //  todo[fokin]: apply dark decorators and dark file choosers if macOS Dark theme is enabled
-    //}
-  }
-
   @NotNull
   private static FontUIResource getFont(String yosemite, int size, @JdkConstants.FontStyle int style) {
     if (SystemInfoRt.isMac) {
       // Text family should be used for relatively small sizes (<20pt), don't change to Display
       // see more about SF https://medium.com/@mach/the-secret-of-san-francisco-fonts-4b5295d9a745#.2ndr50z2v
-      Font font = enableKerning(new Font(SystemInfo.isMacOSCatalina ? ".AppleSystemUIFont" : ".SF NS Text", style, size));
+      Font font = FontUtil.enableKerning(new Font(SystemInfo.isMacOSCatalina ? ".AppleSystemUIFont" : ".SF NS Text", style, size));
       if (!StartupUiUtil.isDialogFont(font)) {
         return new FontUIResource(font);
       }
@@ -793,14 +866,15 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
     return new FontUIResource(yosemite, style, size);
   }
 
-
   public static void installMacOSXFonts(UIDefaults defaults) {
+    @SuppressWarnings("SpellCheckingInspection")
     final String face = "Helvetica Neue";
-    final FontUIResource uiFont = getFont(face, 13, Font.PLAIN);
-    initFontDefaults(defaults, uiFont);
-    for (Object key : new HashSet<>(defaults.keySet())) {
-      if (!(key instanceof String)) continue;
-      if (!StringUtil.endsWithIgnoreCase(((String)key), "font")) continue;
+    // ui font
+    initFontDefaults(defaults, getFont(face, 13, Font.PLAIN));
+    for (Object key : new ArrayList<>(defaults.keySet())) {
+      if (!(key instanceof String) || !Strings.endsWithIgnoreCase(((String)key), "font")) {
+        continue;
+      }
       Object value = defaults.get(key);
       if (value instanceof FontUIResource) {
         FontUIResource font = (FontUIResource)value;
@@ -812,8 +886,7 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
       }
     }
 
-    FontUIResource uiFont11 = getFont(face, 11, Font.PLAIN);
-    defaults.put("TableHeader.font", uiFont11);
+    defaults.put("TableHeader.font", getFont(face, 11, Font.PLAIN));
 
     FontUIResource buttonFont = getFont("Helvetica Neue", 13, Font.PLAIN);
     defaults.put("Button.font", buttonFont);
@@ -908,13 +981,14 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
   private static void patchRowHeight(UIDefaults defaults, String key, float prevScale) {
     Object value = defaults.get(key);
     int rowHeight = value instanceof Integer ? (Integer)value : 0;
-    if (!SystemInfo.isMac && !SystemInfo.isWindows && Registry.is("linux.row.height.disabled")) {
+    if (!SystemInfoRt.isMac && !SystemInfoRt.isWindows && Registry.is("linux.row.height.disabled", true)) {
       rowHeight = 0;
     }
     else if (rowHeight <= 0) {
       LOG.warn(key + " = " + value + " in " + UIManager.getLookAndFeel().getName() + "; it may lead to performance degradation");
     }
-    defaults.put(key, rowHeight <= 0 ? 0 : JBUIScale.scale((int)(rowHeight / prevScale)));
+    int custom = Registry.intValue("ide.override." + key, -1);
+    defaults.put(key, custom >= 0 ? custom : rowHeight <= 0 ? 0 : JBUIScale.scale((int)(rowHeight / prevScale)));
   }
 
   private static void fixMenuIssues(@NotNull UIDefaults uiDefaults) {
@@ -930,14 +1004,14 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
   private static void fixPopupWeight() {
     int popupWeight = OurPopupFactory.WEIGHT_MEDIUM;
     String property = System.getProperty("idea.popup.weight");
-    if (property != null) property = StringUtil.toLowerCase(property).trim();
+    if (property != null) property = Strings.toLowerCase(property).trim();
     if (SystemInfoRt.isMac) {
       // force heavy weight popups under Leopard, otherwise they don't have shadow or any kind of border.
       popupWeight = OurPopupFactory.WEIGHT_HEAVY;
     }
     else if (property == null) {
       // use defaults if popup weight isn't specified
-      if (SystemInfo.isWindows) {
+      if (SystemInfoRt.isWindows) {
         popupWeight = OurPopupFactory.WEIGHT_HEAVY;
       }
     }
@@ -995,8 +1069,8 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
   }
 
   private void restoreOriginalFontDefaults(UIDefaults defaults) {
-    LafReference lf = myCurrentLaf == null ? null : getLookAndFeelReference(LafType.ALL);
-    HashMap<String, Object> lfDefaults = myStoredDefaults.get(lf);
+    LafReference lf = myCurrentLaf == null ? null : getLookAndFeelReference();
+    Map<String, Object> lfDefaults = myStoredDefaults.get(lf);
     if (lfDefaults != null) {
       for (String resource : ourPatchableFontResources) {
         defaults.put(resource, lfDefaults.get(resource));
@@ -1006,8 +1080,8 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
   }
 
   private void storeOriginalFontDefaults(UIDefaults defaults) {
-    LafReference lf = myCurrentLaf == null ? null : getLookAndFeelReference(LafType.ALL);
-    HashMap<String, Object> lfDefaults = myStoredDefaults.get(lf);
+    LafReference lf = myCurrentLaf == null ? null : getLookAndFeelReference();
+    Map<String, Object> lfDefaults = myStoredDefaults.get(lf);
     if (lfDefaults == null) {
       lfDefaults = new HashMap<>();
       for (String resource : ourPatchableFontResources) {
@@ -1017,10 +1091,9 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
     }
   }
 
-  private static void updateUI(Window window) {
+  private static void updateUI(@NotNull Window window) {
     IJSwingUtilities.updateComponentTreeUI(window);
-    Window[] children = window.getOwnedWindows();
-    for (Window w : children) {
+    for (Window w : window.getOwnedWindows()) {
       IJSwingUtilities.updateComponentTreeUI(w);
     }
   }
@@ -1037,8 +1110,40 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
   }
 
   @Override
-  public boolean isAutoDetect() {
-    return autodetect.getValue();
+  public boolean getAutodetect() {
+    return autodetect;
+  }
+
+  @Override
+  public void setAutodetect(boolean value) {
+    autodetect = value;
+    if (autodetect) {
+      detectAndSyncLaf();
+    }
+  }
+
+  @Override
+  public boolean getAutodetectSupported() {
+    return getOrCreateLafDetector().getDetectionSupported();
+  }
+
+  private @NotNull SystemDarkThemeDetector getOrCreateLafDetector() {
+    SystemDarkThemeDetector result = lafDetector;
+    if (result == null) {
+      result = SystemDarkThemeDetector.createDetector(this::syncLaf);
+      lafDetector = result;
+    }
+    return result;
+  }
+
+  @Override
+  public void setPreferredDarkLaf(UIManager.@NotNull LookAndFeelInfo value) {
+    myPreferredDarkLaf = value;
+  }
+
+  @Override
+  public void setPreferredLightLaf(UIManager.@NotNull LookAndFeelInfo value) {
+    myPreferredLightLaf = value;
   }
 
   private static void repaintUI(Window window) {
@@ -1057,13 +1162,13 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
     String pasteActionKey = useSimpleActionKeys ? "paste" : DefaultEditorKit.pasteAction;
     String cutActionKey = useSimpleActionKeys ? "cut" : DefaultEditorKit.cutAction;
     // Ctrl+Ins, Shift+Ins, Shift+Del
-    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_INSERT, InputEvent.CTRL_MASK | InputEvent.CTRL_DOWN_MASK), copyActionKey);
-    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_INSERT, InputEvent.SHIFT_MASK | InputEvent.SHIFT_DOWN_MASK), pasteActionKey);
-    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_DELETE, InputEvent.SHIFT_MASK | InputEvent.SHIFT_DOWN_MASK), cutActionKey);
+    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_INSERT, InputEvent.CTRL_DOWN_MASK), copyActionKey);
+    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_INSERT, InputEvent.SHIFT_DOWN_MASK), pasteActionKey);
+    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_DELETE, InputEvent.SHIFT_DOWN_MASK), cutActionKey);
     // Ctrl+C, Ctrl+V, Ctrl+X
-    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_C, InputEvent.CTRL_MASK | InputEvent.CTRL_DOWN_MASK), copyActionKey);
-    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_V, InputEvent.CTRL_MASK | InputEvent.CTRL_DOWN_MASK), pasteActionKey);
-    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_X, InputEvent.CTRL_MASK | InputEvent.CTRL_DOWN_MASK), DefaultEditorKit.cutAction);
+    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_C, InputEvent.CTRL_DOWN_MASK), copyActionKey);
+    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_V, InputEvent.CTRL_DOWN_MASK), pasteActionKey);
+    inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_X, InputEvent.CTRL_DOWN_MASK), DefaultEditorKit.cutAction);
   }
 
   public static void initInputMapDefaults(UIDefaults defaults) {
@@ -1111,7 +1216,7 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
     defaults.put("EditorPane.font", textFont);
   }
 
-  private static class OurPopupFactory extends PopupFactory {
+  private static final class OurPopupFactory extends PopupFactory {
     public static final int WEIGHT_LIGHT = 0;
     public static final int WEIGHT_MEDIUM = 1;
     public static final int WEIGHT_HEAVY = 2;
@@ -1202,14 +1307,16 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
 
   private static final class DefaultMenuArrowIcon extends MenuArrowIcon {
     private static final BooleanSupplier dark = () -> ColorUtil.isDark(UIManager.getColor("MenuItem.selectionBackground"));
+
     private DefaultMenuArrowIcon() {
-      super(AllIcons.Icons.Ide.NextStep,
-            dark.getAsBoolean() ? AllIcons.Icons.Ide.NextStepInverted : AllIcons.Icons.Ide.NextStep,
-            IconLoader.getDisabledIcon(AllIcons.Icons.Ide.NextStep));
+      super(() -> AllIcons.Icons.Ide.MenuArrow,
+            () -> dark.getAsBoolean() ? AllIcons.Icons.Ide.MenuArrowSelected : AllIcons.Icons.Ide.MenuArrow,
+            () -> IconLoader.getDisabledIcon(AllIcons.Icons.Ide.MenuArrow));
     }
   }
 
   private static LafManagerImpl ourTestInstance;
+
   @TestOnly
   public static LafManagerImpl getTestInstance() {
     if (ourTestInstance == null) {
@@ -1218,7 +1325,7 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
     return ourTestInstance;
   }
 
-  private class UIThemeEPListener implements ExtensionPointListener<UIThemeProvider> {
+  private final class UIThemeEPListener implements ExtensionPointListener<UIThemeProvider> {
     @Override
     public void extensionAdded(@NotNull UIThemeProvider provider, @NotNull PluginDescriptor pluginDescriptor) {
       for (UIManager.LookAndFeelInfo feel : getInstalledLookAndFeels()) {
@@ -1245,9 +1352,9 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
 
       updateLafComboboxModel();
 
-      // When updating a theme plugin that doesn't provide the current theme, don't select any of its themes as current
-      if (!myUpdatingPlugin || newTheme.getTheme().getId().equals(myThemeIdBeforePluginUpdate)) {
-        setLookAndFeelImpl(newTheme, false, false);
+      // when updating a theme plugin that doesn't provide the current theme, don't select any of its themes as current
+      if (!autodetect && (!myUpdatingPlugin || newTheme.getTheme().getId().equals(myThemeIdBeforePluginUpdate))) {
+        setLookAndFeelImpl(newTheme, true, false);
         JBColor.setDark(newTheme.getTheme().isDark());
         updateUI();
       }
@@ -1261,7 +1368,7 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
         if (lookAndFeel instanceof UIThemeBasedLookAndFeelInfo) {
           UITheme theme = ((UIThemeBasedLookAndFeelInfo)lookAndFeel).getTheme();
           if (theme.getId().equals(provider.id)) {
-            if (lookAndFeel == getCurrentLookAndFeel(LafType.ALL)) {
+            if (lookAndFeel == getCurrentLookAndFeel()) {
               switchLafTo = theme.isDark() ? myDefaultDarkLaf : myDefaultLightLaf;
             }
             ((EditorColorsManagerImpl) EditorColorsManager.getInstance()).handleThemeRemoved(theme);
@@ -1274,10 +1381,155 @@ public final class LafManagerImpl extends LafManager implements PersistentStateC
       updateLafComboboxModel();
 
       if (switchLafTo != null) {
-        setLookAndFeelImpl(switchLafTo, false, true);
+        setLookAndFeelImpl(switchLafTo, true, true);
         JBColor.setDark(switchLafTo == myDefaultDarkLaf);
         updateUI();
       }
+    }
+  }
+
+  private static final class LafCellRenderer extends SimpleListCellRenderer<LafReference> {
+    private static final SeparatorWithText separator = new SeparatorWithText() {
+      @Override
+      protected void paintComponent(Graphics g) {
+        g.setColor(getForeground());
+
+        Rectangle bounds = new Rectangle(getWidth(), getHeight());
+        JBInsets.removeFrom(bounds, getInsets());
+
+        paintLine(g, bounds.x, bounds.y + bounds.height/2, bounds.width);
+      }
+    };
+
+    @Override
+    public Component getListCellRendererComponent(JList<? extends LafReference> list,
+                                                  LafReference value,
+                                                  int index,
+                                                  boolean isSelected,
+                                                  boolean cellHasFocus) {
+      return value == SEPARATOR ? separator : super.getListCellRendererComponent(list, value, index, isSelected, cellHasFocus);
+    }
+
+    @Override
+    public void customize(@NotNull JList<? extends LafReference> list, LafReference value, int index, boolean selected, boolean hasFocus) {
+      setText(value.toString());
+    }
+  }
+
+  private final class LafComboBoxModel extends CollectionComboBoxModel<LafReference> {
+    private LafComboBoxModel() {
+      super(getAllReferences());
+    }
+
+    @Override
+    public void setSelectedItem(@Nullable Object item) {
+      if (item != SEPARATOR) {
+        super.setSelectedItem(item);
+      }
+    }
+  }
+
+  private final class PreferredLafAction extends DefaultActionGroup {
+    private PreferredLafAction() {
+      setPopup(true);
+      getTemplatePresentation().setIcon(AllIcons.General.GearPlain);
+      getTemplatePresentation().setText(IdeBundle.message("preferred.theme.text"));
+      getTemplatePresentation().setDescription(IdeBundle.message("preferred.theme.description"));
+    }
+
+    @Override
+    public boolean isDumbAware() {
+      return true;
+    }
+
+    @Override
+    public boolean canBePerformed(@NotNull DataContext context) {
+      return true;
+    }
+
+    @Override
+    public void actionPerformed(@NotNull AnActionEvent e) {
+      ListPopup popup = JBPopupFactory.getInstance().
+        createActionGroupPopup(IdeBundle.message("preferred.theme.text"), getLafGroups(), e.getDataContext(), true, null, Integer.MAX_VALUE);
+
+      HelpTooltip.setMasterPopup(e.getInputEvent().getComponent(), popup);
+      Component component = e.getInputEvent().getComponent();
+      if (component instanceof ActionButtonComponent) {
+        popup.showUnderneathOf(component);
+      }
+      else {
+        popup.showInCenterOf(component);
+      }
+    }
+
+    private @NotNull ActionGroup getLafGroups() {
+      List<UIManager.LookAndFeelInfo> lightLafs = new ArrayList<>();
+      List<UIManager.LookAndFeelInfo> darkLafs = new ArrayList<>();
+
+      for (UIManager.LookAndFeelInfo lafInfo : myLaFs.getValue()) {
+        if (lafInfo instanceof UIThemeBasedLookAndFeelInfo && ((UIThemeBasedLookAndFeelInfo)lafInfo).getTheme().isDark() ||
+            lafInfo.getName().equals(DarculaLaf.NAME)) {
+          darkLafs.add(lafInfo);
+        }
+        else {
+          lightLafs.add(lafInfo);
+        }
+      }
+
+      DefaultActionGroup group = new DefaultActionGroup();
+      group.addAll(createThemeActions(IdeBundle.message("preferred.theme.light.header"), lightLafs, false));
+      group.addAll(createThemeActions(IdeBundle.message("preferred.theme.dark.header"), darkLafs, true));
+      return group;
+    }
+
+    private @NotNull Collection<AnAction> createThemeActions(@NotNull @NlsContexts.Separator String separatorText,
+                                                             @NotNull List<? extends UIManager.LookAndFeelInfo> lafs,
+                                                             boolean isDark) {
+      List<AnAction> result = new ArrayList<>();
+      if (!lafs.isEmpty()) {
+        result.add(Separator.create(separatorText));
+        for (UIManager.LookAndFeelInfo l : lafs) {
+          result.add(new LafToggleAction(l.getName(), l, isDark));
+        }
+      }
+      return result;
+    }
+  }
+
+  private final class LafToggleAction extends ToggleAction {
+    private final UIManager.LookAndFeelInfo lafInfo;
+    private final boolean isDark;
+
+    private LafToggleAction(@Nls String name, UIManager.LookAndFeelInfo lafInfo, boolean isDark) {
+      super(name);
+      this.lafInfo = lafInfo;
+      this.isDark = isDark;
+    }
+
+    @Override
+    public boolean isSelected(@NotNull AnActionEvent e) {
+      return isDark ? lafInfo == myPreferredDarkLaf : lafInfo == myPreferredLightLaf;
+    }
+
+    @Override
+    public void setSelected(@NotNull AnActionEvent e, boolean state) {
+      if (isDark) {
+        if (myPreferredDarkLaf != lafInfo) {
+          myPreferredDarkLaf = lafInfo;
+          detectAndSyncLaf();
+        }
+      }
+      else {
+        if (myPreferredLightLaf != lafInfo) {
+          myPreferredLightLaf = lafInfo;
+          detectAndSyncLaf();
+        }
+      }
+    }
+
+    @Override
+    public boolean isDumbAware() {
+      return true;
     }
   }
 }
