@@ -7,8 +7,11 @@ import com.intellij.ide.dnd.DnDEvent;
 import com.intellij.openapi.Disposable;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.vcs.FilePath;
-import com.intellij.openapi.vcs.changes.Change;
-import com.intellij.openapi.vcs.changes.ChangeListManagerImpl;
+import com.intellij.openapi.vcs.VcsBundle;
+import com.intellij.openapi.vcs.changes.*;
+import com.intellij.openapi.vcs.changes.shelf.ShelvedChangeList;
+import com.intellij.util.containers.ContainerUtil;
+import com.intellij.util.ui.tree.TreeUtil;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
@@ -19,7 +22,6 @@ import static com.intellij.openapi.vcs.changes.ui.ChangesBrowserNode.IGNORED_FIL
 import static com.intellij.openapi.vcs.changes.ui.ChangesBrowserNode.UNVERSIONED_FILES_TAG;
 import static com.intellij.openapi.vcs.changes.ui.ChangesListView.getChanges;
 import static com.intellij.openapi.vcs.changes.ui.ChangesListView.getFilePaths;
-import static java.util.stream.Collectors.toList;
 
 public final class ChangesViewDnDSupport extends ChangesTreeDnDSupport {
   @NotNull private final Project myProject;
@@ -37,9 +39,9 @@ public final class ChangesViewDnDSupport extends ChangesTreeDnDSupport {
   @Override
   protected DnDDragStartBean createDragStartBean(@NotNull DnDActionInfo info) {
     if (info.isMove()) {
-      Change[] changes = getChanges(myProject, myTree.getSelectionPaths()).toArray(Change[]::new);
-      List<FilePath> unversionedFiles = getFilePaths(myTree.getSelectionPaths(), UNVERSIONED_FILES_TAG).collect(toList());
-      List<FilePath> ignoredFiles = getFilePaths(myTree.getSelectionPaths(), IGNORED_FILES_TAG).collect(toList());
+      Change[] changes = getChanges(myProject, myTree.getSelectionPaths()).toList().toArray(Change[]::new);
+      List<FilePath> unversionedFiles = getFilePaths(myTree.getSelectionPaths(), UNVERSIONED_FILES_TAG).toList();
+      List<FilePath> ignoredFiles = getFilePaths(myTree.getSelectionPaths(), IGNORED_FILES_TAG).toList();
 
       if (changes.length > 0 || !unversionedFiles.isEmpty() || !ignoredFiles.isEmpty()) {
         return new DnDDragStartBean(new ChangeListDragBean(myTree, changes, unversionedFiles, ignoredFiles));
@@ -50,15 +52,18 @@ public final class ChangesViewDnDSupport extends ChangesTreeDnDSupport {
   }
 
   @Override
-  protected boolean canHandleDropEvent(@NotNull DnDEvent aEvent, @NotNull ChangesBrowserNode<?> dropNode) {
+  protected boolean canHandleDropEvent(@NotNull DnDEvent aEvent, @Nullable ChangesBrowserNode<?> dropNode) {
     Object attached = aEvent.getAttachedObject();
     if (attached instanceof ChangeListDragBean) {
-      final ChangeListDragBean dragBean = (ChangeListDragBean)attached;
-      dragBean.setTargetNode(dropNode);
-      return dragBean.getSourceComponent() == myTree && dropNode.canAcceptDrop(dragBean);
+      if (dropNode != null) {
+        final ChangeListDragBean dragBean = (ChangeListDragBean)attached;
+        dragBean.setTargetNode(dropNode);
+        return dragBean.getSourceComponent() == myTree && dropNode.canAcceptDrop(dragBean);
+      }
     }
     else if (attached instanceof ShelvedChangeListDragBean) {
-      return dropNode instanceof ChangesBrowserChangeListNode;
+      return dropNode == null ||
+             dropNode instanceof ChangesBrowserChangeListNode;
     }
     return false;
   }
@@ -67,14 +72,25 @@ public final class ChangesViewDnDSupport extends ChangesTreeDnDSupport {
   public void drop(DnDEvent aEvent) {
     Object attached = aEvent.getAttachedObject();
     if (attached instanceof ShelvedChangeListDragBean) {
-      unshelveSilentlyWithDnd(myProject, (ShelvedChangeListDragBean)attached, getDropRootNode(myTree, aEvent), !isCopyAction(aEvent));
+      ShelvedChangeListDragBean dragBean = (ShelvedChangeListDragBean)attached;
+      ChangesBrowserNode<?> dropRootNode = getDropRootNode(myTree, aEvent);
+      LocalChangeList targetChangeList;
+      if (dropRootNode != null) {
+        targetChangeList = TreeUtil.getUserObject(LocalChangeList.class, dropRootNode);
+      }
+      else {
+        ShelvedChangeList changeList = ContainerUtil.getFirstItem(dragBean.getShelvedChangelists());
+        String suggestedName = changeList != null ? changeList.getName() : VcsBundle.message("changes.new.changelist");
+        String listName = ChangeListUtil.createNameForChangeList(myProject, suggestedName);
+        targetChangeList = ChangeListManager.getInstance(myProject).addChangeList(listName, null);
+      }
+      unshelveSilentlyWithDnd(myProject, dragBean, targetChangeList, !isCopyAction(aEvent));
     }
     else if (attached instanceof ChangeListDragBean) {
       final ChangeListDragBean dragBean = (ChangeListDragBean)attached;
       final ChangesBrowserNode<?> changesBrowserNode = dragBean.getTargetNode();
       if (changesBrowserNode != null) {
-        ChangeListManagerImpl changeListManager = ChangeListManagerImpl.getInstanceImpl(myProject);
-        changesBrowserNode.acceptDrop(changeListManager, dragBean);
+        changesBrowserNode.acceptDrop(new DefaultChangeListOwner(myProject), dragBean);
       }
     }
   }
